Fix responsive login pages (size out image column on narrow screens)

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
@@ -12,6 +12,7 @@
     position: absolute;
     right: 0;
     width: 50vw;
+    min-width: 40rem;
     height: 100vh;
     display: flex;
     justify-content: center;
